# CharityPixelization

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: hsl.rs  lenna.rs
src/: dither.rs  lib.rs  main.rs  sampling.rs  sprite.rs
src/dither/: kmeans.rs
