[package]
name = "charity_pixelization"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.0"
palette = { version = "0.7.5", features = ["serializing"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["serde_derive"] }
wasm-bindgen = "0.2.92"
