[package]
name = "charity_pixelization"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm = ["dep:wasm-bindgen-rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.0"
ordered-float = "4.2.0"
palette = "0.7.5"
rand = "0.8.5"
getrandom = {version = "0.2", features = ["js"]}
rayon = "1.10.0"
wasm-bindgen = {version = "0.2.92"}
wasm-bindgen-rayon = {version = "1.2.1", optional = true}
anyhow = "1.0.81"

[profile.release]
debug = true
